--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4654,6 +4654,19 @@
             </intent-filter>
         </receiver>
 
+        <activity android:name="com.rice.settings.fragments.about.ChangelogActivity"
+                android:label="@string/changelog_rice_title"
+                android:theme="@style/Theme.SubSettingsBase"
+                android:enabled="true"
+                android:exported="true"
+                android:taskAffinity="com.android.settings"
+                android:parentActivityName="Settings">
+            <intent-filter android:priority="70">
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <!-- This is the longest AndroidManifest.xml ever. -->
         <activity android:name=".Settings$SmartPixelsActivity"
             android:label="@string/smart_pixels_title"
